Fixed navigation dropdown collapse and minor css updates

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -420,9 +420,8 @@ image {
   top: 0;
 }
 
-
 button.navbar-toggler {
-  color: red;
+  border: solid red;
   position: fixed;
   top: 10px;
   right: 10px;
