--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -116,6 +116,8 @@ h1.home {
     border-radius: 25px;
     margin-right: 10%;
     border: solid white 5px;
+    box-sizing: border-box;
+    max-height: 255px;
   }
 
   .featured_merchant_spotlight {
@@ -231,6 +233,7 @@ h1.home {
 .new_product_card {
   display: flex;
   flex-direction: row;
+  
 }
 
 .new_product {
